update marquee fix on mobile

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -228,7 +228,6 @@ text-align: center;
 
   .marquee ul {
     display: inline-block;
-    padding-left: 100%;
     animation: marquee 90s linear infinite;
   }
 
@@ -257,7 +256,6 @@ text-align: center;
   }
 
   @keyframes marquee {
-    0% { transform: translateX(0%); }
-    100% { transform: translateX(-100%); }
-
+    0% { transform: translateX(100%); }
+    100% { transform: translateX(calc(-1 * (100% + 50px))); } /* Adjust the 50px value to accommodate the content width */
   }
